--- a/ViewComponentsExample/Views/Shared/Components/Grid/Sample.cshtml
+++ b/ViewComponentsExample/Views/Shared/Components/Grid/Sample.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@model PersonGridModel
+
 <div class="box">
-    <h3>Grid</h3>
+    <h3>@Model.GridTitle</h3>
     <table class="table w-100">
         <thead>
             <tr>
@@ -9,14 +10,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>One</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Two</td>
-            </tr>
+            @foreach (Person person in Model.Persons)
+            {
+                <tr>
+                    <td>@person.PersonName</td>
+                    <td>@person.JobTitle</td>
+                </tr>
+            }
         </tbody>
     </table>
 </div>
