--- a/ViewComponentsExample/Views/Home/About.cshtml
+++ b/ViewComponentsExample/Views/Home/About.cshtml
@@ -9,6 +9,17 @@
     Nullam nec sollicitudin lorem, sit amet tempor ante. Integer elementum, augue quis lacinia finibus, dolor tellus auctor ligula, id ultrices eros justo eleifend felis. Aenean laoreet velit id libero bibendum bibendum. Nulla et metus in velit feugiat faucibus et sed felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque vitae scelerisque eros. Integer porttitor nulla et nisi malesuada fringilla. Nulla sollicitudin tortor sit amet lacus ultricies, eu mattis lacus fringilla. Nunc vel lacus ac sapien rhoncus semper ut auctor ligula.
 </p>
 
-@await Component.InvokeAsync("Grid")
+@{
+    PersonGridModel personGridModel = new PersonGridModel()
+    {
+        GridTitle = "Friends",
+        Persons = new List<Person>()
+        {
+            new Person() {PersonName = "Emma", JobTitle = "Manager" },
+            new Person() {PersonName = "Eva", JobTitle = "Asst." },
+            new Person() {PersonName = "Edna", JobTitle = "Clerk" }
+        }
+    };
+}
 
-<vc:grid></vc:grid>
+<vc:grid grid="personGridModel"></vc:grid>
