--- a/ViewComponentsExample/Views/Home/Index.cshtml
+++ b/ViewComponentsExample/Views/Home/Index.cshtml
@@ -4,3 +4,12 @@
 
 <h1>Home</h1>
 
+<button class="button button-blue-back" id="load-friends-button">
+    Load Friends
+</button>
+
+<div id="list">
+
+</div>
+
+<script src="~/friends.js"></script>
